# ecology-plugins

./: .gitignore  .gitmodules  README.md  README_CN.md
.claude-plugin/: marketplace.json
dify-plugin-oceanbase/: README.md  README_CN.md
flyway-oceanbase-plugin/: README.md  README_CN.md  pom.xml
langgraph-checkpoint-oceanbase-plugin/: README.md  README_CN.md  pyproject.toml
metabase-oceanbase-plugin/: README.md  README_CN.md
oceanbase-dify-plugins/: .gitignore  PRIVACY.md  README.md  README_CN.md  main.py  manifest.yaml  requirements.txt
oceanbase-sql-helper-plugin/: .gitignore  LICENSE  README.md  README_CN.md  doc.md  package-lock.json  package.json  tsconfig.json
oceanbase-sqlalchemy-plugin/: LICENSE  README.md  README_CN.md  setup.cfg  setup.py
pyobsql-oceanbase-plugin/: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
pyobsql-oceanbase-plugin/.github/workflows/: ci.yml  publish-pypi.yml
pyobsql-oceanbase-plugin/pyobsql/: __init__.py
pyobsql-oceanbase-plugin/pyobsql/client/: __init__.py  ob_client.py
pyobsql-oceanbase-plugin/pyobsql/json_table/: __init__.py  oceanbase_dialect.py  virtual_data_type.py
pyobsql-oceanbase-plugin/pyobsql/schema/: __init__.py  dialect.py  ob_table.py  reflection.py  sparse_vector.py  vector.py
pyobsql-oceanbase-plugin/pyobsql/util/: __init__.py  sparse_vector.py  vector.py
pyobsql-oceanbase-plugin/tests/: __init__.py  test_comprehensive_oceanbase.py  test_json_table.py  test_ob_client.py  test_oceanbase_dialect.py  test_partition_compile.py  test_reflection.py
seekdb-claudecode-plugin/: README.md  (+2 more)
(+200 files in other folders)
