[project]
name = "pyobsql"
version = "0.1.0"
description = "A python SDK for OceanBase SQL, including JSON Table support and SQLAlchemy dialect extensions."
authors = [{name="shanhaikang.shk",email="shanhaikang.shk@oceanbase.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["oceanbase", "sql", "json-table", "sqlalchemy"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.17.0,<2.0.0",
    "sqlalchemy>=1.4,<=3",
    "sqlglot>=26.0.1,<28.0.0",
    "pydantic>=2.7.0,<3"
]

[project.urls]
Homepage = "https://github.com/oceanbase/ecology-plugins/tree/main/pyobsql-oceanbase-plugin"
Repository = "https://github.com/oceanbase/ecology-plugins.git"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pylint>=3.2.7"
]

[tool.pytest.ini_options]
log_level = "INFO"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
packages = ["pyobsql"]




